# wordle-py

./: LICENSE.txt  README.md  pyproject.toml
src/wordle_py/: __about__.py  __main__.py
src/wordle_py/cli/: __init__.py
src/wordle_py/data/: __init__.py
src/wordle_py/solvers/: interface.py  query_s.py
src/wordle_py/words/: render.py  words.py
tests/: test_get_data.py  test_words.py
